--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,49 @@
 @import "tailwindcss";
 
-@theme {
+:root {
+  /* --- LIGHT MODE (Default) --- */
+  --bg-color: #ffffff;        /* Pure White */
+  --surface-color: #cccccf;   /* Zinc 100 (Light Gray) */
+  --border-color: #e4e4e7;    /* Zinc 200 */
+  --muted-color: #71717a;     /* Zinc 500  */
   
-  --color-background: #09090b; /* Zinc 950 (Deep Dark) */
-  --color-surface: #18181b;    /* Zinc 900 (Panel/Card) */
-  --color-border: #27272a;     /* Zinc 800 (Borders) */
-  --color-muted: #a1a1aa;      /* Zinc 400 (Subtitles) */
+  --primary-color: #4f46e5;   /* Indigo 600*/
+  --primary-fg: #ffffff;      /* White text on button */
+  --text-color: black;
 
-  --color-primary: #6366f1;           
-  --color-primary-foreground: #ffffff; 
+  --nav-icon-active: #4f46e5;   /* Indigo 600 */
+  --nav-icon-inactive: #a1a1aa; /* Zinc 400 */
+}
+
+.dark {
+  /* --- DARK MODE --- */
+  --bg-color: #09090b;        /* Zinc 950 */
+  --surface-color: #18181b;   /* Zinc 900 */
+  --border-color: #27272a;    /* Zinc 800 */
+  --muted-color: #a1a1aa;     /* Zinc 400 */
+  
+  --primary-color: #6366f1;   /* Indigo 500 */
+  --primary-fg: #ffffff;
+  --text-color: white;
+
+  --nav-icon-active: #818cf8;   /* Indigo 400 */
+  --nav-icon-inactive: #52525b; /* Zinc 600 */
+}
+
+@theme {
+  --color-background: var(--bg-color);
+  --color-surface: var(--surface-color);
+  --color-border: var(--border-color);
+  --color-muted: var(--muted-color);
+
+  --color-primary: var(--primary-color);
+  --color-primary-foreground: var(--primary-fg);
 
   --font-sans: 'Outfit', sans-serif;
   --font-mono: '"JetBrains Mono"', monospace;
 
   --animate-shake: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
-  
+
   @keyframes shake {
     10%, 90% { transform: translate3d(-1px, 0, 0); }
     20%, 80% { transform: translate3d(2px, 0, 0); }
